trunk/Archive2/14/94b46e5a832770/output
main.cpp:10:5: error: no matching function for call to 'g'
    g<D>(&D::f);
    ^~~~
main.cpp:7:39: note: candidate template ignored: could not match 'D' against 'B'
template<typename T, typename R> void g(R id_t<T>::*){}
                                      ^
1 error generated.
